--- a/cognossystem-testes/Views/Shared/_Layout.cshtml
+++ b/cognossystem-testes/Views/Shared/_Layout.cshtml
@@ -16,13 +16,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Cognos Testes", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Empresas", "Empresas", "Home")</li>
+                    <li>@Html.ActionLink("Contactos", "Contatos", "Home")</li>
                 </ul>
             </div>
         </div>
@@ -31,12 +31,14 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - MVC - EF ASP.NET Application</p>
         </footer>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/jQueryDatatable")
+    @Scripts.Render("~/bundles/myJavaScripts")
     @RenderSection("scripts", required: false)
 </body>
 </html>
