Delete contact and About (Controller, View and TestMethod). Adjusting view Header 'Empresas'

--- a/cognossystem-testes/Views/Empresas/Index.cshtml
+++ b/cognossystem-testes/Views/Empresas/Index.cshtml
@@ -25,12 +25,12 @@
                 @Html.DisplayNameFor(model => model.Status)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Data_Inclusao)
+                @Html.DisplayNameFor(model => model.Data_Inclusao).ToString().Replace("_", " ")
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Data_Ultima_alteracao)
+                @Html.DisplayNameFor(model => model.Data_Ultima_Alteracao).ToString().Replace("_", " ")
             </th>
-            <th></th>
+            <th>Opções</th>
         </tr>
     </thead>
     <tbody>
@@ -54,12 +54,11 @@
                     @Html.DisplayFor(modelItem => item.Data_Inclusao)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Data_Ultima_alteracao)
+                    @Html.DisplayFor(modelItem => item.Data_Ultima_Alteracao)
                 </td>
                 <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.ID }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.ID })
+                    @Html.ActionLink("Editar", "Edit", new { id = item.ID }) |
+                    @Html.ActionLink("Excluir", "Delete", new { id = item.ID })
                 </td>
             </tr>
         }
