Date added when editing record. Change title.

--- a/cognossystem-testes/Views/Empresas/Index.cshtml
+++ b/cognossystem-testes/Views/Empresas/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<cognossystem_testes.Models.Empresas>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Empresas";
 }
 
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Novo", "Create")
 </p>
 <table class="table dataTable">
     <thead>
