--- a/cognossystem-testes/Views/Empresas/Edit.cshtml
+++ b/cognossystem-testes/Views/Empresas/Edit.cshtml
@@ -16,6 +16,7 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ID)
+        @Html.HiddenFor(model => model.Data_Inclusao)
 
         <div class="form-group">
             @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
