--- a/cognossystem-testes/Views/Shared/_Layout.cshtml
+++ b/cognossystem-testes/Views/Shared/_Layout.cshtml
@@ -21,8 +21,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Empresas", "Empresas", "Home")</li>
-                    <li>@Html.ActionLink("Contactos", "Contatos", "Home")</li>
+                    <li>@Html.ActionLink("Empresas", "Index", "Empresas")</li>
+                    <li>@Html.ActionLink("Contactos", "Index", "Contatos")</li>
                 </ul>
             </div>
         </div>
